hphp/hack/test/typecheck/is_expression/option3.php.exp
File "option3.php", line 6, characters 13-28:
Invalid "is" expression hint (Typing[4195])
  File "option3.php", line 6, characters 14-28:
  The "is" operator cannot be used with a tuple of size 2
